--- a/package.json
+++ b/package.json
@@ -43,7 +43,14 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.35.0"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.0",
+    "msw": "^0.35.0",
+    "prettier": "^3.0.0"
   },
   "engines": {
     "node": "16.19.1",
