--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.0",
     "msw": "^0.35.0",
-    "prettier": "^3.0.0"
+    "prettier": "3.0.0"
   },
   "engines": {
     "node": "16.19.1",
