--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "moments",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.4",
-    "bootstrap": "^4.6.0",
-    "jwt-decode": "^3.1.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.3",
-    "react-dom": "^17.0.2",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "heroku-prebuild": "npm install -g serve",
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.0",
-    "msw": "^0.35.0",
-    "prettier": "3.0.0"
-  },
-  "engines": {
-    "node": "16.19.1",
-    "npm": "8.19.3"
-  }
+	"name": "moments",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"axios": "^0.21.4",
+		"bootstrap": "^4.6.0",
+		"jwt-decode": "^3.1.2",
+		"react": "^17.0.2",
+		"react-bootstrap": "^1.6.3",
+		"react-dom": "^17.0.2",
+		"react-infinite-scroll-component": "^6.1.0",
+		"react-router-dom": "^5.3.0",
+		"react-scripts": "^4.0.3",
+		"web-vitals": "^1.1.2"
+	},
+	"scripts": {
+		"heroku-prebuild": "npm install -g serve",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/react-router-dom": "^5.3.3",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^7.32.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-react": "^7.33.0",
+		"msw": "^0.35.0",
+		"prettier": "3.0.0"
+	},
+	"engines": {
+		"node": "16.19.1",
+		"npm": "8.19.3"
+	}
 }
